best seller added

--- a/src/index.css
+++ b/src/index.css
@@ -167,4 +167,16 @@
   transform: scale(1.1); /* Increase size to 110% */
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.35); /* Add shadow for a pop effect */
 }
+
+.pop-up2 {
+  transition: transform 0.4s ease, box-shadow 0.4s ease;
+  transform: scale(1); /* Default scale */
+  box-shadow: none; /* Default shadow */
+}
+
+.pop-up3 {
+  transform: scale(1.1); /* Increase size to 110% */
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.35); /* Add shadow for a pop effect */
+}
+
   
