--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,40 @@
   }
 }
 
+.no-scrollbar::-webkit-scrollbar {
+  display: none; /* Hide scrollbar for Webkit-based browsers */
+}
+.no-scrollbar {
+  -ms-overflow-style: none; /* Hide scrollbar for IE and Edge */
+  scrollbar-width: none; /* Hide scrollbar for Firefox */
+}
+
+/* For all scrollbars globally */
+* {
+  scrollbar-width: thin; /* Firefox */
+  scrollbar-color: #fc7c7c #2b4174; /* Firefox */
+}
+
+*::-webkit-scrollbar {
+  width:  8px; /* Width of the scrollbar */
+  height: 8px; /* Height of the scrollbar */
+}
+
+*::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Background of the scrollbar track */
+  border-radius: 100px !important; /* Optional: Rounded corners */
+}
+
+*::-webkit-scrollbar-thumb {
+  background: #888; /* Scrollbar thumb color */
+  border-radius: 10px !important; /* Optional: Rounded corners */
+} 
+
+*::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Color on hover */
+}
+
+
 /* Playfair Fonts */
 @font-face {
   font-family: "Playfair Display";
@@ -180,7 +214,6 @@
 }
 
 
-/* this  */
 .shadow-drop-2-center {
   -webkit-animation: shadow-drop-2-center 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   animation: shadow-drop-2-center 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
@@ -215,6 +248,5 @@
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.35);
   }
 }
-
 
   
